--- a/package.json
+++ b/package.json
@@ -4,8 +4,17 @@
   "description": "backend for login project",
   "main": "index.js",
   "scripts": {
+    "dev": "npx nodemon server.js",
+    "production": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "panicoli0",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^6.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
+  }
 }
