--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "panicoli0",
   "license": "ISC",
   "dependencies": {
+    "argon2-ffi": "^2.0.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.2"
   },
